--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -13,7 +13,7 @@ metadata:
     a8r.io/rollouts.scm.path: manifests
     a8r.io/rollouts.scm.branch: main
     a8r.io/rollouts.image-repo.type: dockerhub
-    a8r.io/rollouts.image-repo.name: hashicorp/http-echo
+    a8r.io/rollouts.image-repo.name: alixcook11/hello-server
     a8r.io/rollouts.deployment: rollout-demo
     a8r.io/rollouts.mappings: rollout-demo-mapping
 spec:
